semaine-09/manifests/app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app
  namespace: devops-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: devops-app
  template:
    metadata:
      labels:
        app: devops-app
    spec:
      containers:
        - name: app
          image: compose-app:latest
          imagePullPolicy: Never # image importée manuellement dans le containerd de k3s (pas de registry)
          ports:
            - containerPort: 8080
          resources:
            requests:
              cpu: 50m
              memory: 64Mi
            limits:
              memory: 128Mi
---
apiVersion: v1
kind: Service
metadata:
  name: app
  namespace: devops-app
spec:
  selector:
    app: devops-app
  ports:
    - port: 8080
      targetPort: 8080
